compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_bits_with_size.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<_:4, f:bits-2, _:1>> = <<0x77:7>>\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let assert <<_:4, f:bits-2, _:1>> = <<0x77:7>>
}


----- COMPILED JAVASCRIPT
import { makeError, toBitArray, bitArraySlice, sizedInt } from "../gleam.mjs";

function go(x) {
  let $ = toBitArray([sizedInt(0x77, 7, true)]);
  if (!($.bitSize == 7)) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: $ }
    )
  }
  let f = bitArraySlice($, 4, 6);
  return $;
}
