compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_bytes_with_size.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 1462
expression: "\nfn go(x) {\n  let assert <<f:bytes-2>> = <<1, 2>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  let assert <<f:bytes-2>> = <<1, 2>>
}


----- COMPILED JAVASCRIPT
import { makeError, toBitArray, bitArraySlice } from "../gleam.mjs";

function go(x) {
  let $ = toBitArray([1, 2]);
  if ($.bitSize !== 16) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: $, start: 18, pattern_start: 25, pattern_end: 38 }
    )
  }
  let f = bitArraySlice($, 0, 16);
  return $;
}
